omni/tests/goldens/types/unknown_type_21.err
tests/goldens/types/unknown_type_21.omni:1:1: error: type mismatch: cannot assign int to Mystery21
     1 | let value21:Mystery21 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery21 or change the variable type to int
